--- a/Date-time-exercise.ipynb
+++ b/Date-time-exercise.ipynb
@@ -27,14 +27,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 64,
    "id": "def1f1fb-374a-4c3d-90ef-e1ae1af8dcbb",
    "metadata": {},
    "outputs": [],
    "source": [
     "from vega_datasets import data\n",
     "import pandas as pd\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "import calendar\n",
+    "import numpy as np"
    ]
   },
   {
@@ -1595,11 +1597,480 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "ffbb5a5a-99e5-4820-8f3e-e3fe64d1fb43",
+   "execution_count": 60,
+   "id": "db1524fe-18f8-4802-a6f3-4f74b862e8e0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "date\n",
+       "2012-01-01    False\n",
+       "2012-01-02     True\n",
+       "Name: precipitation, dtype: bool"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# create a mask for days with non-zero percipitation\n",
+    "non_zero = seattle_data['precipitation']>0\n",
+    "non_zero.head(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "id": "30011ae4-226b-4562-ab9e-4aeb52456f4a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Dec 12'"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "non_zero.resample('m').sum().idxmax().strftime('%b %y')\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3f84af08-1b2e-4bf1-bb10-072343b77ace",
+   "metadata": {},
+   "source": [
+    "# Use the below dataset for the following exercises:\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "id": "408ea912-a1c6-423e-a087-86980ab31241",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>date</th>\n",
+       "      <th>delay</th>\n",
+       "      <th>distance</th>\n",
+       "      <th>origin</th>\n",
+       "      <th>destination</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2001-01-13 14:56:00</td>\n",
+       "      <td>32</td>\n",
+       "      <td>417</td>\n",
+       "      <td>SAN</td>\n",
+       "      <td>SJC</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2001-01-31 16:40:00</td>\n",
+       "      <td>-5</td>\n",
+       "      <td>1093</td>\n",
+       "      <td>FLL</td>\n",
+       "      <td>ISP</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2001-02-11 18:39:00</td>\n",
+       "      <td>3</td>\n",
+       "      <td>293</td>\n",
+       "      <td>LBB</td>\n",
+       "      <td>DAL</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2001-01-10 21:00:00</td>\n",
+       "      <td>-15</td>\n",
+       "      <td>550</td>\n",
+       "      <td>MSY</td>\n",
+       "      <td>MCO</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2001-03-30 21:45:00</td>\n",
+       "      <td>-2</td>\n",
+       "      <td>229</td>\n",
+       "      <td>STL</td>\n",
+       "      <td>IND</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                 date  delay  distance origin destination\n",
+       "0 2001-01-13 14:56:00     32       417    SAN         SJC\n",
+       "1 2001-01-31 16:40:00     -5      1093    FLL         ISP\n",
+       "2 2001-02-11 18:39:00      3       293    LBB         DAL\n",
+       "3 2001-01-10 21:00:00    -15       550    MSY         MCO\n",
+       "4 2001-03-30 21:45:00     -2       229    STL         IND"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "flights = data.flights_20k()\n",
+    "flights.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "id": "0f2dbc87-6295-4351-b2a9-ac533cae61e7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 20000 entries, 0 to 19999\n",
+      "Data columns (total 5 columns):\n",
+      " #   Column       Non-Null Count  Dtype         \n",
+      "---  ------       --------------  -----         \n",
+      " 0   date         20000 non-null  datetime64[ns]\n",
+      " 1   delay        20000 non-null  int64         \n",
+      " 2   distance     20000 non-null  int64         \n",
+      " 3   origin       20000 non-null  object        \n",
+      " 4   destination  20000 non-null  object        \n",
+      "dtypes: datetime64[ns](1), int64(2), object(2)\n",
+      "memory usage: 781.4+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "flights.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "id": "20850a9a-76bf-4c62-abfa-15185d6b0cde",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "pandas.core.indexes.range.RangeIndex"
+      ]
+     },
+     "execution_count": 70,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#check the index- should be date\n",
+    "type(flights.index)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "id": "48b271b9-2881-4f2d-bb2f-c59b7f93faf8",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#must complete step 2&3 (set date as index and sort)\n",
+    "flights = flights.set_index('date').sort_index()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "id": "68b68336-8d69-4077-9c13-30c7cbc6c7aa",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "pandas.core.indexes.datetimes.DatetimeIndex"
+      ]
+     },
+     "execution_count": 72,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#confirm the change\n",
+    "type(flights.index)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "549033a2-c407-4cbc-b5f9-4d154438aec3",
+   "metadata": {},
+   "source": [
+    "# 1. Convert any negative delays to 0.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "id": "920d73ba-4d01-40de-8367-400761cfc973",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>delay</th>\n",
+       "      <th>distance</th>\n",
+       "      <th>origin</th>\n",
+       "      <th>destination</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>date</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2001-01-01 00:01:00</th>\n",
+       "      <td>14</td>\n",
+       "      <td>405</td>\n",
+       "      <td>MCI</td>\n",
+       "      <td>MDW</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2001-01-01 06:20:00</th>\n",
+       "      <td>0</td>\n",
+       "      <td>491</td>\n",
+       "      <td>BNA</td>\n",
+       "      <td>MCI</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2001-01-01 06:30:00</th>\n",
+       "      <td>0</td>\n",
+       "      <td>251</td>\n",
+       "      <td>MDW</td>\n",
+       "      <td>STL</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2001-01-01 07:00:00</th>\n",
+       "      <td>0</td>\n",
+       "      <td>361</td>\n",
+       "      <td>OAK</td>\n",
+       "      <td>ONT</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2001-01-01 07:00:00</th>\n",
+       "      <td>0</td>\n",
+       "      <td>303</td>\n",
+       "      <td>MSY</td>\n",
+       "      <td>HOU</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                     delay  distance origin destination\n",
+       "date                                                   \n",
+       "2001-01-01 00:01:00     14       405    MCI         MDW\n",
+       "2001-01-01 06:20:00      0       491    BNA         MCI\n",
+       "2001-01-01 06:30:00      0       251    MDW         STL\n",
+       "2001-01-01 07:00:00      0       361    OAK         ONT\n",
+       "2001-01-01 07:00:00      0       303    MSY         HOU"
+      ]
+     },
+     "execution_count": 73,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Correct all negative delays to 0 using np.where\n",
+    "flights['delay'] = np.where(flights['delay'] < 0, 0, flights['delay'])\n",
+    "flights.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "991805a7-9c2a-4854-808a-0e24928d9576",
+   "metadata": {},
+   "source": [
+    "# 2. Which hour of the day has the highest average delay?\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "id": "7d8cd1ce-29ff-4425-921d-6fa61232215b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>delay</th>\n",
+       "      <th>distance</th>\n",
+       "      <th>origin</th>\n",
+       "      <th>destination</th>\n",
+       "      <th>hour</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>date</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2001-01-01 00:01:00</th>\n",
+       "      <td>14</td>\n",
+       "      <td>405</td>\n",
+       "      <td>MCI</td>\n",
+       "      <td>MDW</td>\n",
+       "      <td>00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2001-01-01 06:20:00</th>\n",
+       "      <td>0</td>\n",
+       "      <td>491</td>\n",
+       "      <td>BNA</td>\n",
+       "      <td>MCI</td>\n",
+       "      <td>06</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                     delay  distance origin destination hour\n",
+       "date                                                        \n",
+       "2001-01-01 00:01:00     14       405    MCI         MDW   00\n",
+       "2001-01-01 06:20:00      0       491    BNA         MCI   06"
+      ]
+     },
+     "execution_count": 76,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Create an hour column\n",
+    "flights['hour'] = flights.index.strftime('%H')\n",
+    "flights.head(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "id": "7d14b207-67db-4c63-a9b7-7f0896a0955b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'03'"
+      ]
+     },
+     "execution_count": 77,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#idxmax to return the hour\n",
+    "flights.groupby('hour').delay.mean().idxmax()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "558f3419-fac1-416c-9722-3dfdb4aafeef",
+   "metadata": {},
+   "source": [
+    "# 3. Does the day of the week make a difference in the delay amount?\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2589866f-e3f5-4197-bde4-e695e7d01594",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "flights."
+   ]
   }
  ],
  "metadata": {
