--- a/time-series-exercises.ipynb
+++ b/time-series-exercises.ipynb
@@ -1295,8 +1295,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "id": "097f10f9-0dac-4d05-bf24-e1fbd011719f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0     https://swapi.dev/api/planets/1/\n",
+       "1     https://swapi.dev/api/planets/1/\n",
+       "2     https://swapi.dev/api/planets/8/\n",
+       "3     https://swapi.dev/api/planets/1/\n",
+       "4     https://swapi.dev/api/planets/2/\n",
+       "                    ...               \n",
+       "31                                 NaN\n",
+       "32                                 NaN\n",
+       "33                                 NaN\n",
+       "34                                 NaN\n",
+       "35                                 NaN\n",
+       "Name: homeworld, Length: 106, dtype: object"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "starwars_df.homeworld"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ee0fe953-2af7-4ca1-a301-55583d0cffc9",
    "metadata": {},
    "outputs": [],
    "source": []
